// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Campaign Jobs Stability Snapshots > matches snapshot for 1990_classic_cdrom jobs 1`] = `
[
  {
    "baseWage": 5,
    "id": "zmart_clerk",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "zmart_asst_mgr",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 20,
      "uniform": "dress",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 8,
    "id": "zmart_mgr",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 5,
    "id": "burger_cook",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 0,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
    ],
    "title": "Cook",
  },
  {
    "baseWage": 6,
    "id": "burger_clerk",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "burger_asst_mgr",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 20,
      "uniform": "casual",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 8,
    "id": "burger_mgr",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 30,
      "uniform": "dress",
    },
    "title": "Manager",
  },
  {
    "baseWage": 8,
    "id": "qt_salesperson",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 30,
      "uniform": "dress",
    },
    "title": "Salesperson",
  },
  {
    "baseWage": 9,
    "id": "qt_asst_mgr",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "business",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 12,
    "id": "qt_mgr",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 7,
    "id": "socket_salesperson",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 30,
      "uniform": "dress",
    },
    "title": "Salesperson",
  },
  {
    "baseWage": 11,
    "id": "socket_repairman",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [
        "electronics",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "casual",
    },
    "title": "Electronics Repairman",
  },
  {
    "baseWage": 14,
    "id": "socket_mgr",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [
        "electronics",
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 5,
    "id": "uni_janitor",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 11,
    "id": "uni_teacher",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [
        "academic",
      ],
      "dependability": 50,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Teacher",
  },
  {
    "baseWage": 20,
    "id": "uni_professor",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [
        "research",
      ],
      "dependability": 60,
      "experience": 50,
      "uniform": "dress",
    },
    "title": "Professor",
  },
  {
    "baseWage": 7,
    "id": "factory_janitor",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 8,
    "id": "factory_assembly",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "title": "Assembly Worker",
  },
  {
    "baseWage": 9,
    "id": "factory_secretary",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Secretary",
  },
  {
    "baseWage": 10,
    "id": "factory_machinist_helper",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "pre_engineering",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "casual",
    },
    "title": "Machinist's Helper",
  },
  {
    "baseWage": 18,
    "id": "factory_exec_secretary",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Executive Secretary",
  },
  {
    "baseWage": 19,
    "id": "factory_machinist",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "engineering",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "casual",
    },
    "title": "Machinist",
  },
  {
    "baseWage": 22,
    "id": "factory_dept_mgr",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
        "engineering",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "title": "Department Manager",
  },
  {
    "baseWage": 23,
    "id": "factory_engineer",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
        "engineering",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "title": "Engineer",
  },
  {
    "baseWage": 25,
    "id": "factory_gen_mgr",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
        "engineering",
      ],
      "dependability": 70,
      "experience": 70,
      "uniform": "business",
    },
    "title": "General Manager",
  },
  {
    "baseWage": 6,
    "id": "bank_janitor",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 10,
    "id": "bank_teller",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Teller",
  },
  {
    "baseWage": 14,
    "id": "bank_asst_mgr",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 19,
    "id": "bank_mgr",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 22,
    "id": "bank_broker",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
        "academic",
      ],
      "dependability": 70,
      "experience": 70,
      "uniform": "business",
    },
    "title": "Broker",
  },
  {
    "baseWage": 6,
    "id": "blacks_janitor",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 8,
    "id": "blacks_checker",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 20,
      "uniform": "casual",
    },
    "title": "Checker",
  },
  {
    "baseWage": 12,
    "id": "blacks_butcher",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "title": "Butcher",
  },
  {
    "baseWage": 15,
    "id": "blacks_asst_mgr",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 18,
    "id": "blacks_mgr",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 7,
    "id": "rent_groundskeeper",
    "locationId": "apartment_complex",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Groundskeeper",
  },
  {
    "baseWage": 9,
    "id": "rent_mgr",
    "locationId": "apartment_complex",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "title": "Apartment Manager",
  },
  {
    "baseWage": 6,
    "id": "qt_janitor",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 6,
    "id": "socket_clerk",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Clerk",
  },
]
`;

exports[`Campaign Jobs Stability Snapshots > matches snapshot for advanced jobs 1`] = `
[
  {
    "baseWage": 5,
    "id": "zmart_clerk",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "frontline_service",
    ],
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "zmart_asst_mgr",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 20,
      "uniform": "dress",
    },
    "tags": [
      "middle_management",
    ],
    "title": "Assistant Manager",
  },
  {
    "baseWage": 8,
    "id": "zmart_mgr",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "business",
    },
    "tags": [
      "executive_management",
    ],
    "title": "Manager",
  },
  {
    "baseWage": 5,
    "id": "burger_cook",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 0,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
      "heavy_physical",
    ],
    "title": "Cook",
  },
  {
    "baseWage": 6,
    "id": "burger_clerk",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "frontline_service",
    ],
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "burger_asst_mgr",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 20,
      "uniform": "casual",
    },
    "tags": [
      "middle_management",
    ],
    "title": "Assistant Manager",
  },
  {
    "baseWage": 8,
    "id": "burger_mgr",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 30,
      "uniform": "dress",
    },
    "tags": [
      "executive_management",
    ],
    "title": "Manager",
  },
  {
    "baseWage": 8,
    "id": "qt_salesperson",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 30,
      "uniform": "dress",
    },
    "tags": [
      "frontline_service",
      "high_downtime",
    ],
    "title": "Salesperson",
  },
  {
    "baseWage": 9,
    "id": "qt_asst_mgr",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "business",
    },
    "tags": [
      "middle_management",
    ],
    "title": "Assistant Manager",
  },
  {
    "baseWage": 12,
    "id": "qt_mgr",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "tags": [
      "executive_management",
    ],
    "title": "Manager",
  },
  {
    "baseWage": 7,
    "id": "socket_salesperson",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 30,
      "uniform": "dress",
    },
    "tags": [
      "frontline_service",
      "high_downtime",
    ],
    "title": "Salesperson",
  },
  {
    "baseWage": 11,
    "id": "socket_repairman",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [
        "electronics",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "casual",
    },
    "tags": [
      "technical",
    ],
    "title": "Electronics Repairman",
  },
  {
    "baseWage": 14,
    "id": "socket_mgr",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [
        "electronics",
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "business",
    },
    "tags": [
      "technical",
      "executive_management",
    ],
    "title": "Manager",
  },
  {
    "baseWage": 5,
    "id": "uni_janitor",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
      "heavy_physical",
    ],
    "title": "Janitor",
  },
  {
    "baseWage": 11,
    "id": "uni_teacher",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [
        "academic",
      ],
      "dependability": 50,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Teacher",
  },
  {
    "baseWage": 20,
    "id": "uni_professor",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [
        "research",
      ],
      "dependability": 60,
      "experience": 50,
      "uniform": "dress",
    },
    "tags": [
      "academic_freedom",
    ],
    "title": "Professor",
  },
  {
    "baseWage": 7,
    "id": "factory_janitor",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
      "heavy_physical",
    ],
    "title": "Janitor",
  },
  {
    "baseWage": 8,
    "id": "factory_assembly",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "tags": [
      "technical",
    ],
    "title": "Assembly Worker",
  },
  {
    "baseWage": 9,
    "id": "factory_secretary",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "tags": [
      "frontline_service",
      "high_downtime",
    ],
    "title": "Secretary",
  },
  {
    "baseWage": 10,
    "id": "factory_machinist_helper",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "pre_engineering",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "casual",
    },
    "tags": [
      "technical",
    ],
    "title": "Machinist's Helper",
  },
  {
    "baseWage": 18,
    "id": "factory_exec_secretary",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "tags": [
      "middle_management",
      "high_downtime",
    ],
    "title": "Executive Secretary",
  },
  {
    "baseWage": 19,
    "id": "factory_machinist",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "engineering",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "casual",
    },
    "tags": [
      "technical",
    ],
    "title": "Machinist",
  },
  {
    "baseWage": 22,
    "id": "factory_dept_mgr",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
        "engineering",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "tags": [
      "technical",
      "middle_management",
    ],
    "title": "Department Manager",
  },
  {
    "baseWage": 23,
    "id": "factory_engineer",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
        "engineering",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "tags": [
      "technical",
    ],
    "title": "Engineer",
  },
  {
    "baseWage": 25,
    "id": "factory_gen_mgr",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
        "engineering",
      ],
      "dependability": 70,
      "experience": 70,
      "uniform": "business",
    },
    "tags": [
      "technical",
      "executive_management",
    ],
    "title": "General Manager",
  },
  {
    "baseWage": 6,
    "id": "bank_janitor",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
      "heavy_physical",
    ],
    "title": "Janitor",
  },
  {
    "baseWage": 10,
    "id": "bank_teller",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "tags": [
      "frontline_service",
    ],
    "title": "Teller",
  },
  {
    "baseWage": 14,
    "id": "bank_asst_mgr",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "tags": [
      "middle_management",
    ],
    "title": "Assistant Manager",
  },
  {
    "baseWage": 19,
    "id": "bank_mgr",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "tags": [
      "executive_management",
    ],
    "title": "Manager",
  },
  {
    "baseWage": 22,
    "id": "bank_broker",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
        "academic",
      ],
      "dependability": 70,
      "experience": 70,
      "uniform": "business",
    },
    "title": "Broker",
  },
  {
    "baseWage": 6,
    "id": "blacks_janitor",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
      "heavy_physical",
    ],
    "title": "Janitor",
  },
  {
    "baseWage": 8,
    "id": "blacks_checker",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 20,
      "uniform": "casual",
    },
    "tags": [
      "frontline_service",
    ],
    "title": "Checker",
  },
  {
    "baseWage": 12,
    "id": "blacks_butcher",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "tags": [
      "heavy_physical",
    ],
    "title": "Butcher",
  },
  {
    "baseWage": 15,
    "id": "blacks_asst_mgr",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "tags": [
      "middle_management",
    ],
    "title": "Assistant Manager",
  },
  {
    "baseWage": 18,
    "id": "blacks_mgr",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "tags": [
      "executive_management",
    ],
    "title": "Manager",
  },
  {
    "baseWage": 7,
    "id": "rent_groundskeeper",
    "locationId": "apartment_complex",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "heavy_physical",
    ],
    "title": "Groundskeeper",
  },
  {
    "baseWage": 9,
    "id": "rent_mgr",
    "locationId": "apartment_complex",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "tags": [
      "frontline_service",
      "high_downtime",
    ],
    "title": "Apartment Manager",
  },
  {
    "baseWage": 6,
    "id": "qt_janitor",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 6,
    "id": "socket_clerk",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "tags": [
      "frontline_service",
    ],
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "pawn_security_guard",
    "locationId": "pawn_shop",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 15,
      "experience": 15,
      "uniform": "casual",
    },
    "tags": [
      "high_downtime",
      "look_fit",
    ],
    "title": "Security Guard",
  },
  {
    "baseWage": 9,
    "id": "pawn_appraiser",
    "locationId": "pawn_shop",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 25,
      "experience": 25,
      "uniform": "casual",
    },
    "tags": [
      "frontline_service",
      "high_downtime",
    ],
    "title": "Counter Appraiser",
  },
  {
    "baseWage": 13,
    "id": "pawn_horologist",
    "locationId": "pawn_shop",
    "perks": [],
    "requirements": {
      "degrees": [
        "pre_engineering",
      ],
      "dependability": 35,
      "experience": 35,
      "uniform": "casual",
    },
    "tags": [
      "technical",
      "high_downtime",
    ],
    "title": "Horologist",
  },
]
`;

exports[`Campaign Jobs Stability Snapshots > matches snapshot for qol_improved jobs 1`] = `
[
  {
    "baseWage": 5,
    "id": "zmart_clerk",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "zmart_asst_mgr",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 20,
      "uniform": "dress",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 8,
    "id": "zmart_mgr",
    "locationId": "z_mart",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 5,
    "id": "burger_cook",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 0,
      "uniform": "casual",
    },
    "tags": [
      "always_hiring",
    ],
    "title": "Cook",
  },
  {
    "baseWage": 6,
    "id": "burger_clerk",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Clerk",
  },
  {
    "baseWage": 7,
    "id": "burger_asst_mgr",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 20,
      "uniform": "casual",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 8,
    "id": "burger_mgr",
    "locationId": "burger_palace",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 30,
      "uniform": "dress",
    },
    "title": "Manager",
  },
  {
    "baseWage": 8,
    "id": "qt_salesperson",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 30,
      "uniform": "dress",
    },
    "title": "Salesperson",
  },
  {
    "baseWage": 9,
    "id": "qt_asst_mgr",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "business",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 12,
    "id": "qt_mgr",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 7,
    "id": "socket_salesperson",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 30,
      "experience": 30,
      "uniform": "dress",
    },
    "title": "Salesperson",
  },
  {
    "baseWage": 11,
    "id": "socket_repairman",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [
        "electronics",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "casual",
    },
    "title": "Electronics Repairman",
  },
  {
    "baseWage": 14,
    "id": "socket_mgr",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [
        "electronics",
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 5,
    "id": "uni_janitor",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 11,
    "id": "uni_teacher",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [
        "academic",
      ],
      "dependability": 50,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Teacher",
  },
  {
    "baseWage": 20,
    "id": "uni_professor",
    "locationId": "university",
    "perks": [],
    "requirements": {
      "degrees": [
        "research",
      ],
      "dependability": 60,
      "experience": 50,
      "uniform": "dress",
    },
    "title": "Professor",
  },
  {
    "baseWage": 7,
    "id": "factory_janitor",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 8,
    "id": "factory_assembly",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "title": "Assembly Worker",
  },
  {
    "baseWage": 9,
    "id": "factory_secretary",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Secretary",
  },
  {
    "baseWage": 10,
    "id": "factory_machinist_helper",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "pre_engineering",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "casual",
    },
    "title": "Machinist's Helper",
  },
  {
    "baseWage": 18,
    "id": "factory_exec_secretary",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Executive Secretary",
  },
  {
    "baseWage": 19,
    "id": "factory_machinist",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "engineering",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "casual",
    },
    "title": "Machinist",
  },
  {
    "baseWage": 22,
    "id": "factory_dept_mgr",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
        "engineering",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "title": "Department Manager",
  },
  {
    "baseWage": 23,
    "id": "factory_engineer",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
        "engineering",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "title": "Engineer",
  },
  {
    "baseWage": 25,
    "id": "factory_gen_mgr",
    "locationId": "factory",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
        "engineering",
      ],
      "dependability": 70,
      "experience": 70,
      "uniform": "business",
    },
    "title": "General Manager",
  },
  {
    "baseWage": 6,
    "id": "bank_janitor",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 10,
    "id": "bank_teller",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Teller",
  },
  {
    "baseWage": 14,
    "id": "bank_asst_mgr",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 19,
    "id": "bank_mgr",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 60,
      "experience": 60,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 22,
    "id": "bank_broker",
    "locationId": "bank",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
        "academic",
      ],
      "dependability": 70,
      "experience": 70,
      "uniform": "business",
    },
    "title": "Broker",
  },
  {
    "baseWage": 6,
    "id": "blacks_janitor",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 10,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 8,
    "id": "blacks_checker",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 20,
      "uniform": "casual",
    },
    "title": "Checker",
  },
  {
    "baseWage": 12,
    "id": "blacks_butcher",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "trade_school",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "title": "Butcher",
  },
  {
    "baseWage": 15,
    "id": "blacks_asst_mgr",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 40,
      "experience": 40,
      "uniform": "dress",
    },
    "title": "Assistant Manager",
  },
  {
    "baseWage": 18,
    "id": "blacks_mgr",
    "locationId": "blacks_market",
    "perks": [],
    "requirements": {
      "degrees": [
        "business_admin",
      ],
      "dependability": 50,
      "experience": 50,
      "uniform": "business",
    },
    "title": "Manager",
  },
  {
    "baseWage": 7,
    "id": "rent_groundskeeper",
    "locationId": "apartment_complex",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Groundskeeper",
  },
  {
    "baseWage": 9,
    "id": "rent_mgr",
    "locationId": "apartment_complex",
    "perks": [],
    "requirements": {
      "degrees": [
        "junior_college",
      ],
      "dependability": 30,
      "experience": 30,
      "uniform": "casual",
    },
    "title": "Apartment Manager",
  },
  {
    "baseWage": 6,
    "id": "qt_janitor",
    "locationId": "qt_clothing",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Janitor",
  },
  {
    "baseWage": 6,
    "id": "socket_clerk",
    "locationId": "socket_city",
    "perks": [],
    "requirements": {
      "degrees": [],
      "dependability": 20,
      "experience": 10,
      "uniform": "casual",
    },
    "title": "Clerk",
  },
]
`;
